[package]
name = "raccoon"
version = "0.1.0"
authors = ["Albert Cervin <albert@acervin.com>"]
edition = "2018"

[dependencies]
gotham = "~0.3.0"
gotham_derive = "~0.3.0"
hyper = "~0.12"
mime = "~0.3.12"
serde = "~1.0.80"
serde_json = "~1.0"
serde_derive = "~1.0.80"
futures = "~0.1.25"
slog = "~2.4.1"
slog-term = "~2.4.0"
slog-async = "~2.3.0"
config = "~0.9.1"
xdg = "~2"
irc = "~0.13"
structopt = "~0.2"
