[package]
name = "raccoon"
version = "0.1.0"
authors = ["Albert Cervin <albert@acervin.com>"]
edition = "2018"

[dependencies]
gotham = "0.4"
gotham_derive = "0.4"
hyper = "0.12"
mime = "0.3"
serde = "1"
serde_json = "1"
serde_derive = "1"
futures = "0.1"
slog = "2"
slog-term = "2"
slog-async = "2"
config = "0.9"
xdg = "2"
irc = "0.13"
structopt = "0.2"
